attempt #2 to fix title alignment (success)

--- a/style.css
+++ b/style.css
@@ -1,56 +1,28 @@
-/*.big-title {
-  display: flex;
-  justify-content: center;
-  color: #EAEAEA;
-  background-color: #212121;
-  padding: 15px;
-} */
-/*from repl website*/
+
 body {
-
-  background-color: #0B0B0B;
-  font-style: italic;
-  font-family: 'Press Start 2P', cursive;
-  font-size: 15px;
-}
-
-.favorites {
+  background: rgb(12, 12, 12);
+  padding-top: 5em;
   display: flex;
   justify-content: center;
-  color: #322e2b;
-  background-color: white;
-  border-radius:20px;
-  margin-left:700px;
-  margin-right:700px;
-  padding-right: 100px;
-  padding-left: 100px;
-  padding-top:20px;
-  padding-bottom:20px;
 }
 
+/*h1 title km by km*/
 .typewriter h1 {
-  /*background-color: #EAEAEA;*/
-  color:white;
-  overflow: hidden;
-  border-right: .15em  solid #595959;
-  white-space: nowrap;
-  margin: 20px auto;
-  margin-left:150px;
-  padding: 20px;
-  letter-spacing: .10 em;
+  color: rgb(255, 255, 255);
+  font-family: 'Press Start 2P', cursive;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid rgb(70, 70, 70); /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
   animation: 
     typing 3.5s steps(30, end),
     blink-caret .5s step-end infinite;
 }
 
+/* The typing effect */
 @keyframes typing {
-  from {width:0} 
-  to {width: 100%}
+  from { width: 0 }
+  to { width: 100% }
 }
 
-@keyframes blink-caret {
-  from, to{border-color: transparent}
-  50% {border-color: #595959;}
-}
-
-/* 595959 */
